[gd_scene format=3 uid="uid://bd3pckjawhbrf"]

[ext_resource type="PackedScene" uid="uid://ra0dvpnucne4" path="res://Assets/Meshes/buildings/upgrade_bench.glb" id="1_6ltf0"]
[ext_resource type="Script" uid="uid://dgslqth815yuv" path="res://Scripts/upgrade_bench.gd" id="1_nkjjk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6ltf0"]
size = Vector3(1.9657593, 3.0771484, 3.272583)

[sub_resource type="BoxShape3D" id="BoxShape3D_nkjjk"]
size = Vector3(4.4072266, 2.8393555, 5.638031)

[node name="upgrade_bench" type="Node3D" unique_id=76472263]
script = ExtResource("1_nkjjk")

[node name="upgrade_bench" parent="." unique_id=765367816 instance=ExtResource("1_6ltf0")]

[node name="StaticBody3D" type="StaticBody3D" parent="." unique_id=547393679]
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" unique_id=172395039]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.019927979, 1.0385742, 0.008850098)
shape = SubResource("BoxShape3D_6ltf0")

[node name="Area3D" type="Area3D" parent="." unique_id=527278023]
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=910750624]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.286316, 0.91967773, -0.13905334)
shape = SubResource("BoxShape3D_nkjjk")

[node name="Label3D" type="Label3D" parent="." unique_id=1309749662]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3637085, 4.745514, 0)
billboard = 2
text = "Click To Pick Up!"
font_size = 100

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="upgrade_bench"]
